<resources>
    <string name="app_name">Fisherman Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fish">Рыба</string>
    <string name="bait">Наживка</string>
    <string name="tackle">Снасти</string>
    <string name="lure">Прикормка</string>
    <string name="different">разное</string>
    <string name="story">Рыбацкие истории</string>
    <string name="tip">Полезные советы</string>
</resources>